--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fond": "^2.0.1",
     "formik": "^2.2.9",
     "fund": "^1.0.0",
+    "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
