--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "fund": "^1.0.0",
     "lodash": "^4.17.21",
+    "material-ui-popup-state": "^1.9.3",
     "moment": "^2.26.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
