--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
     "moment": "^2.26.0",
+    "natural-drag-animation-rbdnd": "^2.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
