--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "chart.js": "^3.5.1",
     "fond": "^2.0.1",
     "formik": "^2.2.9",
     "fund": "^1.0.0",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.9.3",
     "moment": "^2.26.0",
@@ -23,8 +25,11 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-chartjs-2": "^3.1.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
