--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^3.1.0",
     "react-circular-progressbar": "^2.0.4",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-drag-drop-container": "^6.1.1",
     "react-google-login": "^5.2.2",
@@ -41,6 +43,7 @@
     "socket.io-client": "^4.2.0",
     "web-vitals": "^1.0.1"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
